<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background">

            <RelativeLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:padding="15dp">

                <TextView
                    android:id="@+id/labelTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/title_setting"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/labelSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/labelTitle"
                    android:text="@string/subtitle_setting"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/silver" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/header"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_field_name"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/gray"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/hint_name_text"
                    android:inputType="text"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp">

                    <requestFocus />
                </EditText>

                <TextView
                    android:id="@+id/infoName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/dummy_text_medium"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/red_light"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_field_work"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/gray"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/work"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/hint_work_text"
                    android:inputType="text"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/infoWork"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/dummy_text_medium"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/red_light"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_field_about"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/gray"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:ems="10"
                    android:gravity="top"
                    android:hint="@string/hint_about_text"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/infoAbout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/dummy_text_medium"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/red_light"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_field_password"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/gray"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/hint_password_text"
                    android:inputType="textPassword"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/infoPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/dummy_text_medium"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/red_light"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_field_newpassword"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/gray"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/newPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/hint_new_password_text"
                    android:inputType="textPassword"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_field_confirm_password"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/gray"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/hint_confirm_password_text"
                    android:inputType="textPassword"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/infoConfirmPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/dummy_text_medium"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/red_light"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/buttonSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/button"
                    android:paddingLeft="85dp"
                    android:paddingRight="85dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/label_button_save"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/loadingScreen"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:background="#DD000000"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone" >

                <ImageView
                    android:id="@+id/loadingIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/description_general"
                    android:src="@drawable/loading0001"
                    android:layout_marginBottom="30dp"/>
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>

